--- a/client/index.html
+++ b/client/index.html
@@ -1,23 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TravelGrid - Discover top travel packages, hotels & local experiences around the world. Plan your next trip with ease." />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="planora - Discover top travel packages, hotels & local experiences around the world. Plan your next trip with ease."
+    />
 
-  <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <!-- Leaflet CSS -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    />
 
-  <title>TravelGrid | Discover Top Travel Packages, Hotels & Local Experiences</title>
-</head>
-<body style="background-color: #f9f1f7; margin: 0;">
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
+    <title>
+      planora | Discover Top Travel Packages, Hotels & Local Experiences
+    </title>
+  </head>
+  <body style="background-color: #f9f1f7; margin: 0">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
